# deepvault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-gui.bat  build-gui.sh  config.example.json  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1759927810756-ac40af6a9402a.mjs
src/: App.vue  config.rs  crypto.rs  device.rs  error.rs  lib.rs  main.js  mount.rs  partition.rs  utils.rs  wipe.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ConfigType.vue  DeviceList.vue  FileExplorer.vue  Logs.vue  Progress.vue  SecurityConfig.vue  Usage.vue
tests/: integration_test.rs  unit_test.rs
